kubernetes/apps/home-assistant/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: home-assistant
  name: home-assistant-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ha.kalexlab.xyz`)
      services:
        - name: home-assistant
          port: 8123
    - kind: Rule
      match: Host(`z2m.ha.kalexlab.xyz`)
      services:
        - name: zigbee2mqtt
          port: 8080
  tls:
    secretName: home-assistant-ingress-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: home-assistant
  name: mosquitto
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`mqtt.kalexlab.xyz`)
      # TODO: uncomment this when on Mosquitto 2.1, which should add support for proxy protocol
      # serversTransport: default
      services:
        - name: mosquitto
          port: 1883
  tls:
    secretName: home-assistant-ingress-certificate-secret
