kubernetes/apps/home-assistant/base/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: home-assistant
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: home-assistant
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: home-assistant
  name: home-assistant
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: home-assistant
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8123
  egress:
    # Allow OIDC with Authelia
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8443
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: mosquitto
      ports:
        - protocol: TCP
          port: 1883
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: home-assistant
  name: mosquitto
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: mosquitto
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: home-assistant
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: zigbee2mqtt
      ports:
        - protocol: TCP
          port: 1883
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: home-assistant
  name: zigbee2mqtt
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: zigbee2mqtt
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: mosquitto
      ports:
        - protocol: TCP
          port: 1883
    # For OTA updates
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
